# alphatriangle

./: .coverage  .coverage.ip-192-168-86-32.ec2.internal.41167.XCgYyXIx  .gitignore  .resumed.txt  MANIFEST.in  README.md  files  mypy_output.txt  out.md  pyproject.toml  requirements.txt  ruff_output.txt  run_interactive.py  run_shape_editor.py  run_training_headless.py  run_training_visual.py
.github/workflows/: ci_cd.yml
alphatriangle/: cli.py  logging_config.py
alphatriangle/config/: README.md  __init__.py  env_config.py  mcts_config.py  model_config.py  persistence_config.py  stats_config.py  train_config.py  validation.py
alphatriangle/data/: README.md  data_manager.py  path_manager.py  serializer.py
alphatriangle/environment/grid/: grid_data.py  logic.py
alphatriangle/environment/logic/: step.py
alphatriangle/environment/shapes/: README.md
alphatriangle/features/: README.md  extractor.py
alphatriangle/interaction/: debug_mode_handler.py
alphatriangle/mcts/: out.md
alphatriangle/mcts/core/: node.py  search.py  types.py
alphatriangle/mcts/strategy/: expansion.py  policy.py  selection.py
alphatriangle/nn/: model.py  network.py
alphatriangle/rl/: README.md  types.py
alphatriangle/rl/core/: README.md  trainer.py
alphatriangle/rl/self_play/: README.md  mcts_helpers.py  worker.py
alphatriangle/stats/: README.md  __init__.py  collector.py  plot_definitions.py  plot_rendering.py  plot_utils.py  plotter.py  processor.py  types.py
alphatriangle/structs/: __init__.py
alphatriangle/training/: README.md  __init__.py  components.py  logging_utils.py  loop.py  loop_helpers.py  runner.py  runners.py  setup.py  worker_manager.py
alphatriangle/utils/: README.md  __init__.py  helpers.py  types.py
alphatriangle/visualization/: README.md
alphatriangle/visualization/core/: README.md  dashboard_renderer.py  layout.py
alphatriangle/visualization/drawing/: grid.py  hud.py
alphatriangle/visualization/ui/: progress_bar.py
src/: app.py  cli.py
src/config/: __init__.py  env_config.py  mcts_config.py  model_config.py  persistence_config.py  train_config.py  validation.py  vis_config.py
src/data/: __init__.py  data_manager.py  schemas.py
src/environment/: __init__.py
src/environment/core/: action_codec.py  game_state.py
src/environment/grid/: __init__.py  grid_data.py  logic.py  triangle.py
src/environment/logic/: actions.py  step.py
src/environment/shapes/: __init__.py  logic.py  shape.py  templates.py
src/features/: __init__.py  extractor.py  grid_features.py
src/interaction/: debug_mode_handler.py  event_processor.py  input_handler.py  play_mode_handler.py
src/mcts/: __init__.py
src/mcts/core/: node.py  search.py  types.py
src/mcts/strategy/: backpropagation.py  expansion.py  policy.py  selection.py
src/nn/: model.py  network.py
src/rl/: __init__.py  types.py
src/rl/core/: __init__.py  buffer.py  trainer.py  visual_state_actor.py
src/rl/self_play/: worker.py
src/stats/: __init__.py  collector.py  plot_utils.py  plotter.py
src/structs/: __init__.py  constants.py  shape.py  triangle.py
src/training/: __init__.py  components.py  logging_utils.py  loop.py  pipeline.py  runners.py
src/utils/: __init__.py  geometry.py  helpers.py  sumtree.py  types.py
src/visualization/: __init__.py  utils.py
src/visualization/core/: colors.py  coord_mapper.py  dashboard_renderer.py  fonts.py  game_renderer.py  layout.py  visualizer.py
src/visualization/drawing/: grid.py  highlight.py  hud.py  previews.py  shapes.py
src/visualization/ui/: progress_bar.py
tests/: conftest.py
tests/data/: test_path_data_interaction.py
tests/environment/: conftest.py  test_actions.py  test_grid_logic.py  test_shape_logic.py  test_step.py
tests/mcts/: conftest.py  fixtures.py  out.md  test_expansion.py  test_selection.py
tests/nn/: test_model.py  test_network.py
tests/rl/: test_buffer.py  test_trainer.py
tests/stats/: test_collector.py  test_processor.py
tests/training/: test_loop_integration.py  test_save_resume.py
